tests/parser/tests/cases/should_fail/triple_colon_in_access_name/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:6
1 |   a::b:::c<int>();
  |        ^ here
  = note: Expected identifier after a name access qualifier '::'.
